# docker-hello-world

./: Dockerfile  Dockerfile.aarch64  Dockerfile.x86-64  README.md  a.out  aarch64.out  aarch64.sh  build-docker.sh  build.sh  make.sh  x86-64.out  x86-64.sh
00-rust/: .gitignore  Cargo.toml  Dockerfile  build.sh
01-rust/: Cargo.toml  build.sh
01-rust/src/: main.rs
02-asm/: a.out  build.sh  hello-world.asm
03-asm/: a.out  hello-world.asm
04-asm/: Dockerfile  a.out  build.sh  hello-world.asm
05-asm/: a.out  build.sh  hello-world.asm
hello-world/: Cargo.toml
hello-world/src/: main.rs
