[package]
name = "hello-world"
version = "0.1.0"
authors = ["printfn <printfn@users.noreply.github.com"]
edition = "2018"

[dependencies]
#libc = { version = "0.2", default-features = false }
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }

[profile.dev]
panic = 'abort'

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

